--- a/style.css
+++ b/style.css
@@ -262,6 +262,13 @@ main .img-block .img-block__img-credit a {
   text-align: center;
 }
 
+@media only screen and (orientation: Portrait) {
+  main .img-block .img-block__img-credit {
+    font-size: 0.5rem;
+    margin-bottom: 0;
+  }
+}
+
 main .form-block {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-box-flex: 7.5;
